增加卡通特效;cmakelist将复制fonts文件夹

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -25,6 +25,7 @@ message(${JIGSAW_PUZZLE_INCLUDE_DIRS})
 set(JIGSAW_PUZZLE_LIB_DIRS ${PROJECT_SOURCE_DIR}/lib)
 message(${JIGSAW_PUZZLE_LIB_DIRS})
 
+file(COPY ${PROJECT_SOURCE_DIR}/fonts DESTINATION ${PROJECT_SOURCE_DIR}/build/)
 file(COPY ${PROJECT_SOURCE_DIR}/shaders DESTINATION ${PROJECT_SOURCE_DIR}/build/)
 #set(CMAKE_INSTALL_PREFIX )
 #set(CMAKE_INSTALL_PATH "../LIB")
